--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,8 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: dhhblog_production
-  username: dhhblog
-  password: <%= ENV["DHHBLOG_DATABASE_PASSWORD"] %>
+<%# production: %>
+<%#   <<: *default %>
+<%#   database: dhhblog_production %>
+<%#   username: dhhblog %>
+<%#   password: <%= ENV["DHHBLOG_DATABASE_PASSWORD"] %1> %>
